add-minio-image-storage
